[package]
name = "hdfs-native-object-store"
version = "0.13.0"
edition = "2021"
authors = ["Adam Binford <adamq43@gmail.com>"]
homepage = "https://github.com/datafusion-contrib/hdfs-native-object-store"
repository = "https://github.com/datafusion-contrib/hdfs-native-object-store"
keywords = ["hadoop", "hdfs", "object_store"]
description = "object_store implementation for Native HDFS client"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
hdfs-native = "0.11"
object_store = ">= 0.10, < 0.12"
thiserror = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync", "time"] }

[dev-dependencies]
env_logger = "0.10"
serial_test = "2"

[features]
integration-test = ["hdfs-native/integration-test"]