[package]
name = "hdfs-native-object-store"
version = "0.16.0"
edition = "2024"
authors = ["Adam Binford <adamq43@gmail.com>"]
homepage = "https://github.com/datafusion-contrib/hdfs-native-object-store"
repository = "https://github.com/datafusion-contrib/hdfs-native-object-store"
keywords = ["hadoop", "hdfs", "object_store"]
description = "object_store implementation for Native HDFS client"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
hdfs-native = "0.13"
object_store = "0.13"
thiserror = "2"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync", "time"] }

[dev-dependencies]
env_logger = "0.11"
serial_test = "3"

[features]
integration-test = ["hdfs-native/integration-test", "object_store/integration"]
